generate and tweak images show route

--- a/app/templates/images/show.hbs
+++ b/app/templates/images/show.hbs
@@ -13,6 +13,7 @@
 
 <div class="row">
   <div class="col-md-12">
+    <img {{bind-attr src=model.url}}>
     <!-- Insert the pixelate-image component, bind src to model.url, bind value to pixelatePercentage -->
     ! Implement pixelate-image here !
   </div>
